added route guard and fixed backend url bug

--- a/src/app/navbar/nav-bar.component.html
+++ b/src/app/navbar/nav-bar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" >Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['movies/favorites']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">My Favorite movies</a>
+        <a class="nav-link" *ngIf="auth.isAuthenticated()" [routerLink]="['movies/favorites']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">My Favorite movies</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" routerLinkActive="active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
